--- a/MANIMath/requirements.txt
+++ b/MANIMath/requirements.txt
@@ -1,9 +1,48 @@
 Django==4.2.2
 asgiref==3.7.2
 pip==23.1.2
-setuptools==67.8.0
+setuptools==68.0.0
 sqlparse==0.4.4
 typing_extensions==4.6.3
 tzdata==2023.3
 fontawesomefree==6.4.0
 Pillow==9.5.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+click-default-group==1.2.2
+cloup==0.13.1
+colorama==0.4.6
+colour==0.1.5
+decorator==5.1.1
+glcontext==2.3.7
+idna==3.4
+isosurfaces==0.1.0
+manim==0.17.3
+ManimPango==0.4.3
+mapbox-earcut==1.0.1
+markdown-it-py==3.0.0
+mdurl==0.1.2
+moderngl==5.8.2
+moderngl-window==2.4.4
+mpmath==1.3.0
+multipledispatch==0.6.0
+networkx==2.8.8
+numpy==1.25.0
+pycairo==1.24.0
+pydub==0.25.1
+pyglet==2.0.8
+Pygments==2.15.1
+pyrr==0.10.3
+requests==2.31.0
+rich==13.4.2
+scipy==1.10.1
+screeninfo==0.8.1
+six==1.16.0
+skia-pathops==0.7.4
+srt==3.5.3
+svgelements==1.9.5
+sympy==1.12
+tqdm==4.65.0
+urllib3==2.0.3
+watchdog==2.3.1
