--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # Other Folders
-/MANIMath/MANIMath_Env
+/MANIMath/MANIMath_Venv
 
 # User-specific files
 *.rsuser
